<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.jhhy.cuiweitourism.fragment.Tab4Fragment2"
    android:orientation="vertical">

    <include layout="@layout/title_tab4" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/tab4_top_height"
                android:orientation="horizontal"
                >
                <ImageView
                    android:id="@id/fhvp_header"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/tab4_top_height"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/tab4_bg" />

                <RelativeLayout
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="20dp">

                    <com.jhhy.cuiweitourism.view.CircleImageView
                        android:id="@+id/tab4_user_icon"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@mipmap/default_user_icon"
                        app:border_color="@color/colorCircleBorder"
                        app:border_width="2dp"
                        />

                    <RelativeLayout
                        android:layout_marginLeft="16dp"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/tab4_user_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fragment_mine_login_regist_notice"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            android:drawableRight="@mipmap/arrow_right_light"
                            android:drawablePadding="6dp"
                            android:layout_centerVertical="true"
                            android:visibility="gone"
                            />
                        <TextView
                            android:id="@+id/tab4_user_nickname"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="id66699955555"
                            android:maxLines="1"
                            android:textStyle="bold"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            android:paddingBottom="6dp"/>
                        <TextView
                            android:layout_below="@+id/tab4_user_nickname"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fragment_mine_login_notice"
                            android:textColor="@android:color/white"
                            android:drawableLeft="@mipmap/tab4_certified"
                            android:drawablePadding="4dp"
                            />

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/tv_tab4_fragment2_my_tourism_coin"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:textColor="@android:color/white"
                        android:padding="6dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_mine_my_travel_money"
                        android:drawableLeft="@mipmap/tab4_my_money"
                        android:drawablePadding="8dp"
                        android:background="@drawable/bg_btn_tab4_my_money"
                        />
                </RelativeLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="76dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_fragment_tab4_all_orders"
                    style="@style/FragmentMineTab"
                    android:drawableTop="@mipmap/tab4_orders"
                    android:text="@string/fragment_mine_all_orders" />

                <TextView
                    android:id="@+id/tv_fragment_tab4_wait_pay"
                    style="@style/FragmentMineTab"
                    android:drawableTop="@mipmap/tab4_payment"

                    android:text="@string/fragment_mine_wait_pay" />

                <TextView
                    android:id="@+id/tv_fragment_tab4_wait_comment"
                    style="@style/FragmentMineTab"
                    android:drawableTop="@mipmap/tab4_comment"
                    android:text="@string/fragment_mine_wait_comment" />

                <TextView
                    android:id="@+id/tv_fragment_tab4_wait_refund"
                    style="@style/FragmentMineTab"
                    android:drawableTop="@mipmap/tab4_refund"
                    android:text="@string/fragment_mine_wait_refund" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@android:color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_user_message"
                    android:drawableLeft="@mipmap/tab4_my_message"
                    style="@style/Tab4Settings"
                    android:text="@string/fragment_mine_my_message" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/colorLineGray" />

                <TextView
                    android:id="@+id/tv_user_comment"
                    android:drawableLeft="@mipmap/tab4_my_comment"
                    style="@style/Tab4Settings"
                    android:text="@string/fragment_mine_my_comment" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/colorLineGray" />

                <TextView
                    android:id="@+id/tv_user_collection"
                    android:drawableLeft="@mipmap/tab4_my_collection"
                    style="@style/Tab4Settings"
                    android:text="@string/fragment_mine_my_collection" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/colorLineGray" />

                <TextView
                    android:id="@+id/tv_user_release"
                    android:drawableLeft="@mipmap/tab4_my_release"
                    style="@style/Tab4Settings"
                    android:text="@string/fragment_mine_my_release" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@android:color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_user_information"
                    android:drawableLeft="@mipmap/tab4_persional_data"
                    style="@style/Tab4Settings"
                    android:text="@string/fragment_mine_personal_data" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/colorLineGray" />

                <TextView
                    android:id="@+id/tv_user_security"
                    android:drawableLeft="@mipmap/tab4_account_security"
                    style="@style/Tab4Settings"
                    android:text="@string/fragment_mine_account_security" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/colorLineGray" />

                <TextView
                    android:id="@+id/tv_user_authentication"
                    android:drawableLeft="@mipmap/tab4_account_certification"
                    style="@style/Tab4Settings"
                    android:text="@string/fragment_mine_account_certification" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/colorLineGray" />

                <TextView
                    android:id="@+id/tv_user_contacts"
                    android:drawableLeft="@mipmap/tab4_top_contacts"
                    style="@style/Tab4Settings"
                    android:text="@string/fragment_mine_top_contacts" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
