<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/colorInnerTravelBottomBar"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_tab1_inner_travel_sort_default"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:drawablePadding="2dp"

        android:drawableTop="@mipmap/tab1_inner_travel_sort_default"
        android:gravity="center_horizontal"
        android:paddingBottom="4dp"
        android:paddingTop="6dp"
        android:text="@string/tab1_inner_travel_sort_default"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tv_tab1_inner_travel_trip_days"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:drawablePadding="2dp"

        android:drawableTop="@mipmap/tab1_inner_travel_trip_days"
        android:gravity="center_horizontal"
        android:paddingBottom="4dp"
        android:paddingTop="6dp"
        android:text="@string/tab1_inner_travel_trip_days"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tv_tab1_inner_travel_start_time"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawablePadding="2dp"
        android:drawableTop="@mipmap/icon_inner_travel_start_time"

        android:gravity="center_horizontal"
        android:paddingBottom="4dp"
        android:paddingTop="6dp"
        android:text="@string/tab1_inner_travel_start_time"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tv_tab1_inner_travel_screen_price"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawablePadding="2dp"
        android:drawableTop="@mipmap/icon_inner_travel_start_time"
        android:gravity="center_horizontal"
        android:paddingBottom="4dp"
        android:paddingTop="6dp"
        android:text="@string/tab1_inner_travel_price_screen"
        android:textColor="@android:color/white" />
</LinearLayout>

