<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorBgTitleMain"
        android:paddingTop="40dp"
        android:paddingBottom="40dp"
        android:paddingLeft="16dp"
        >
        <TextView
            android:text="30000"
            android:textStyle="bold"
            android:textSize="28sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_tab4_my_tourism_coin_number"
            android:textColor="@android:color/white"
            />
        <TextView
            android:layout_toRightOf="@+id/tv_tab4_my_tourism_coin_number"
            android:layout_alignBaseline="@+id/tv_tab4_my_tourism_coin_number"
            android:text="@string/my_tourism_coin_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            />
        <TextView
            android:layout_below="@+id/tv_tab4_my_tourism_coin_number"
            android:text="@string/my_tourism_coin_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/my_tourism_coin_details"
        />
</LinearLayout>
